Implemented Power by a.Exp by Squaring b.Diagonalization for non complex eigens